--- a/portfolio.html
+++ b/portfolio.html
@@ -12,26 +12,28 @@
   </head>
   <body class="body">
     <!--Header-->
-    <header>
-      <div class="head-container container">
+    <header class="header">
+      <div class="header-container container">
         <nav class="page-nav">
-          <a class="nav-logo" href="/">Web <span>Studio</span></a>
-          <ul>
-            <li><a href="./index.html">Студия</a></li>
-            <li><a href="./portfolio.html">Портфолио</a></li>
-            <li><a href="">Контакты</a></li>
+          <a class="nav-logo" href="./index.html">Web <span>Studio</span></a>
+          <ul class="nav-list">
+            <li class="item"><a class="link" href="./index.html">Студия</a></li>
+            <li class="item">
+              <a class="link" href="./portfolio.html">Портфолио</a>
+            </li>
+            <li class="item"><a class="link" href="">Контакты</a></li>
           </ul>
         </nav>
         <!--Contacts-->
         <ul class="nav-contacts">
-          <li>
-            <a href=""
-              ><img src="./images/mail-icon.svg" alt="" />info@devstudio.com</a
+          <li class="item">
+            <a class="link" href=""
+              ><img src="./images/mail-icon.svg" alt="" /> info@devstudio.com</a
             >
           </li>
-          <li>
-            <a href=""
-              ><img src="./images/tel-icon.svg" alt="" />+38 096 111 11 11</a
+          <li class="item">
+            <a class="link" href=""
+              ><img src="./images/tel-icon.svg" alt="" /> +38 096 111 11 11</a
             >
           </li>
         </ul>
@@ -41,123 +43,122 @@
     <main>
       <section>
         <h1 class="title-portf">Заголовок</h1>
-        <div class="button-container">
-          <ul class="list-button">
-            <li><button type="button">Все</button></li>
-            <li><button type="button">Веб-сайт</button></li>
-            <li><button type="button">Приложения</button></li>
-            <li><button type="button">Дизайн</button></li>
-            <li><button type="button">Маркетинг</button></li>
-          </ul>
-        </div>
+
+        <ul class="list-button">
+          <li class="list-item"><button type="button">Все</button></li>
+          <li class="list-item"><button type="button">Веб-сайт</button></li>
+          <li class="list-item"><button type="button">Приложения</button></li>
+          <li class="list-item"><button type="button">Дизайн</button></li>
+          <li class="list-item"><button type="button">Маркетинг</button></li>
+        </ul>
       </section>
       <section>
         <div class="content-container container">
           <ul class="list-content">
-            <li>
+            <li class="list-item">
               <a href="">
                 <img src="./images/Technokrjak.jpg" alt="Ноутбук" />
-                <p>
+                <!-- <p>
                   Технокряк это современная площадка распространения
                   коронавируса. Компании используют эту платформу для цифрового
                   шпионажа и атак на защищённые сервера конкурентов.
-                </p>
+                </p> -->
                 <h2>Технокряк</h2>
                 <p>Веб-сайт</p></a
               >
             </li>
-            <li>
+            <li class="list-item">
               <a href=""
                 ><img src="./images/Basket.jpg" alt="Баскетбол" />
-                <p>
+                <!-- <p>
                   Технокряк это современная площадка распространения
                   коронавируса. Компании используют эту платформу для цифрового
                   шпионажа и атак на защищённые сервера конкурентов.
-                </p>
+                </p> -->
                 <h2>Постер New Orlean vs Golden Stars</h2>
                 <p>Дизайн</p></a
               >
             </li>
-            <li>
+            <li class="list-item">
               <a href=""
                 ><img src="./images/seafood.jpg" alt="Лого ресторана" />
-                <p>
+                <!-- <p>
                   Технокряк это современная площадка распространения
                   коронавируса. Компании используют эту платформу для цифрового
                   шпионажа и атак на защищённые сервера конкурентов.
-                </p>
+                </p> -->
                 <h2>Ресторан Seafood</h2>
                 <p>Приложение</p></a
               >
             </li>
-            <li>
+            <li class="list-item">
               <a href=""
                 ><img src="./images/headphones.jpg" alt="Наушники" />
-                <p>
+                <!-- <p>
                   Технокряк это современная площадка распространения
                   коронавируса. Компании используют эту платформу для цифрового
                   шпионажа и атак на защищённые сервера конкурентов.
-                </p>
+                </p> -->
                 <h2>Проект Prime</h2>
                 <p>Маркетинг</p></a
               >
             </li>
-            <li>
+            <li class="list-item">
               <a href=""
                 ><img src="./images/box.jpg" alt="Коробки" />
-                <p>
+                <!-- <p>
                   Технокряк это современная площадка распространения
                   коронавируса. Компании используют эту платформу для цифрового
                   шпионажа и атак на защищённые сервера конкурентов.
-                </p>
+                </p> -->
                 <h2>Проект Boxes</h2>
                 <p>Приложение</p></a
               >
             </li>
-            <li>
+            <li class="list-item">
               <a href=""
                 ><img src="./images/mac.jpg" alt="Компьютер" />
-                <p>
+                <!-- <p> 
                   Технокряк это современная площадка распространения
                   коронавируса. Компании используют эту платформу для цифрового
                   шпионажа и атак на защищённые сервера конкурентов.
-                </p>
+                </p> -->
                 <h2>Inspiration has no Borders</h2>
                 <p>Веб-сайт</p></a
               >
             </li>
-            <li>
+            <li class="list-item">
               <a href=""
                 ><img src="./images/journal.jpg" alt="Журнал" />
-                <p>
+                <!--  <p>
                   Технокряк это современная площадка распространения
                   коронавируса. Компании используют эту платформу для цифрового
                   шпионажа и атак на защищённые сервера конкурентов.
-                </p>
+                </p> -->
                 <h2>Издание Limited Edition</h2>
                 <p>Дизайн</p></a
               >
             </li>
-            <li>
+            <li class="list-item">
               <a href=""
                 ><img src="./images/lab.jpg" alt="Лого компании" />
-                <p>
+                <!--  <p>
                   Технокряк это современная площадка распространения
                   коронавируса. Компании используют эту платформу для цифрового
                   шпионажа и атак на защищённые сервера конкурентов.
-                </p>
+                </p> -->
                 <h2>Проект LAB</h2>
                 <p>Маркетинг</p></a
               >
             </li>
-            <li>
+            <li class="list-item">
               <a href=""
                 ><img src="./images/laptop.jpg" alt="Ноутбук" />
-                <p>
+                <!--  <p>
                   Технокряк это современная площадка распространения
                   коронавируса. Компании используют эту платформу для цифрового
                   шпионажа и атак на защищённые сервера конкурентов.
-                </p>
+                </p> -->
                 <h2>Growing Business</h2>
                 <p>Приложение</p></a
               >
