--- a/index.html
+++ b/index.html
@@ -43,10 +43,13 @@
         </ul>
       </div>
     </header>
-    <main>
+    <main class="main-index">
       <!--Hero-->
       <section class="hero">
-        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+        <h1 class="hero-title">
+          Эффективные решения <br />
+          для вашего бизнеса
+        </h1>
         <a class="hero-button" href="">Заказать услугу</a>
       </section>
       <!--Преимущества-->
@@ -156,7 +159,7 @@
               <img src="./images/john-smith.jpg" alt="John Smith" />
               <h3>John Smith</h3>
               <p>Product Designer</p>
-              <ul class="socials">
+              <ul class="social">
                 <li>
                   <a href="https://www.instagram.com"
                     ><img src="./images/instagram.svg" alt="instagram"
@@ -183,7 +186,7 @@
               <img src="./images/marta-stewart.jpg" alt="Marta Stewart" />
               <h3>Marta Stewart</h3>
               <p>Frontend Developer</p>
-              <ul class="socials">
+              <ul class="social">
                 <li>
                   <a href="https://www.instagram.com"
                     ><img src="./images/instagram.svg" alt="instagram"
@@ -210,7 +213,7 @@
               <img src="./images/robert-jakis.jpg" alt="Robert Jakis" />
               <h3>Robert Jakis</h3>
               <p>Marketing</p>
-              <ul class="socials">
+              <ul class="social">
                 <li>
                   <a href="https://www.instagram.com"
                     ><img src="./images/instagram.svg" alt="instagram"
@@ -237,7 +240,7 @@
               <img src="./images/martin-doe.jpg" alt="Martin Doe" />
               <h3>Martin Doe</h3>
               <p>UI Designer</p>
-              <ul class="socials">
+              <ul class="social">
                 <li>
                   <a href="https://www.instagram.com"
                     ><img src="./images/instagram.svg" alt="instagram"
@@ -293,44 +296,48 @@
     <!--Футер-->
     <footer class="footer">
       <div class="footer-container container">
-        <a class="footer-link" href="/">Web <span> Studio</span></a>
-        <ul class="footer-list">
-          <li class="footer-list-adress">г. Киев, пр-т Леси Украинки, 26</li>
-          <li class="footer-list-link"><a href=""></a>info@example.com</li>
-          <li class="footer-list-link"><a href=""></a>+38 099 111 11 11</li>
-        </ul>
-        <h3>Присоединяйтесь</h3>
-        <ul class="footer-socials">
-          <li>
-            <a href="https://www.instagram.com"
-              ><img src="./images/instagram.svg" alt="instagram"
-            /></a>
-          </li>
-          <li>
-            <a href="https://www.twitter.com/"
-              ><img src="./images/twitter.svg" alt="twitter"
-            /></a>
-          </li>
-          <li>
-            <a href="https://www.facebook.com/"
-              ><img src="./images/facebook.svg" alt="facebook"
-            /></a>
-          </li>
-          <li>
-            <a href="https://https://www.linkedin.com/"
-              ><img src="./images/linkedin.svg" alt="linkedin"
-            /></a>
-          </li>
-        </ul>
-        <h3>Подписаться на рассылку</h3>
-        <ul class="footer-form">
-          <li><input type="text" /></li>
-          <li><button class="footer-button">Подписаться</button></li>
-        </ul>
-        <div class="text">
-          <span class="text">2020 | Developed by GoIT Students</span>
+        <div class="footer-contacts">
+          <a class="footer-link" href="/">Web <span> Studio</span></a>
+          <ul class="footer-list">
+            <li class="footer-list-adress">г. Киев, пр-т Леси Украинки, 26</li>
+            <li class="footer-list-link"><a href=""></a>info@example.com</li>
+            <li class="footer-list-tel"><a href=""></a>+38 099 111 11 11</li>
+          </ul>
+        </div>
+        <div class="footer-social">
+          <h3>Присоединяйтесь</h3>
+          <ul class="list">
+            <li>
+              <a href="https://www.instagram.com"
+                ><img src="./images/instagram.svg" alt="instagram"
+              /></a>
+            </li>
+            <li>
+              <a href="https://www.twitter.com/"
+                ><img src="./images/twitter.svg" alt="twitter"
+              /></a>
+            </li>
+            <li>
+              <a href="https://www.facebook.com/"
+                ><img src="./images/facebook.svg" alt="facebook"
+              /></a>
+            </li>
+            <li>
+              <a href="https://https://www.linkedin.com/"
+                ><img src="./images/linkedin.svg" alt="linkedin"
+              /></a>
+            </li>
+          </ul>
+        </div>
+        <div class="subscribe">
+          <h3>Подписаться на рассылку</h3>
+          <ul class="footer-form">
+            <li><input class="input" type="text" /></li>
+            <li><button class="footer-button">Подписаться</button></li>
+          </ul>
         </div>
       </div>
+      <p class="copyright">2020 | Developed by GoIT Students</p>
     </footer>
   </body>
 </html>
