--- a/portfolio.html
+++ b/portfolio.html
@@ -42,15 +42,16 @@
     <!--Основной контент-->
     <main>
       <section>
-        <h1 class="title-portf">Заголовок</h1>
-
-        <ul class="list-button">
-          <li class="list-item"><button type="button">Все</button></li>
-          <li class="list-item"><button type="button">Веб-сайт</button></li>
-          <li class="list-item"><button type="button">Приложения</button></li>
-          <li class="list-item"><button type="button">Дизайн</button></li>
-          <li class="list-item"><button type="button">Маркетинг</button></li>
-        </ul>
+        <div class="container">
+          <h1 class="title-portf">Заголовок</h1>
+          <ul class="list-button">
+            <li class="list-item"><button type="button">Все</button></li>
+            <li class="list-item"><button type="button">Веб-сайт</button></li>
+            <li class="list-item"><button type="button">Приложения</button></li>
+            <li class="list-item"><button type="button">Дизайн</button></li>
+            <li class="list-item"><button type="button">Маркетинг</button></li>
+          </ul>
+        </div>
       </section>
       <section>
         <div class="content-container container">
@@ -63,7 +64,7 @@
                   коронавируса. Компании используют эту платформу для цифрового
                   шпионажа и атак на защищённые сервера конкурентов.
                 </p> -->
-                <h2>Технокряк</h2>
+                <h2 class="title">Технокряк</h2>
                 <p>Веб-сайт</p></a
               >
             </li>
@@ -75,7 +76,7 @@
                   коронавируса. Компании используют эту платформу для цифрового
                   шпионажа и атак на защищённые сервера конкурентов.
                 </p> -->
-                <h2>Постер New Orlean vs Golden Stars</h2>
+                <h2 class="title">Постер New Orlean vs Golden Stars</h2>
                 <p>Дизайн</p></a
               >
             </li>
@@ -87,7 +88,7 @@
                   коронавируса. Компании используют эту платформу для цифрового
                   шпионажа и атак на защищённые сервера конкурентов.
                 </p> -->
-                <h2>Ресторан Seafood</h2>
+                <h2 class="title">Ресторан Seafood</h2>
                 <p>Приложение</p></a
               >
             </li>
@@ -99,7 +100,7 @@
                   коронавируса. Компании используют эту платформу для цифрового
                   шпионажа и атак на защищённые сервера конкурентов.
                 </p> -->
-                <h2>Проект Prime</h2>
+                <h2 class="title">Проект Prime</h2>
                 <p>Маркетинг</p></a
               >
             </li>
@@ -111,7 +112,7 @@
                   коронавируса. Компании используют эту платформу для цифрового
                   шпионажа и атак на защищённые сервера конкурентов.
                 </p> -->
-                <h2>Проект Boxes</h2>
+                <h2 class="title">Проект Boxes</h2>
                 <p>Приложение</p></a
               >
             </li>
@@ -123,7 +124,7 @@
                   коронавируса. Компании используют эту платформу для цифрового
                   шпионажа и атак на защищённые сервера конкурентов.
                 </p> -->
-                <h2>Inspiration has no Borders</h2>
+                <h2 class="title">Inspiration has no Borders</h2>
                 <p>Веб-сайт</p></a
               >
             </li>
@@ -135,7 +136,7 @@
                   коронавируса. Компании используют эту платформу для цифрового
                   шпионажа и атак на защищённые сервера конкурентов.
                 </p> -->
-                <h2>Издание Limited Edition</h2>
+                <h2 class="title">Издание Limited Edition</h2>
                 <p>Дизайн</p></a
               >
             </li>
@@ -147,7 +148,7 @@
                   коронавируса. Компании используют эту платформу для цифрового
                   шпионажа и атак на защищённые сервера конкурентов.
                 </p> -->
-                <h2>Проект LAB</h2>
+                <h2 class="title">Проект LAB</h2>
                 <p>Маркетинг</p></a
               >
             </li>
@@ -159,7 +160,7 @@
                   коронавируса. Компании используют эту платформу для цифрового
                   шпионажа и атак на защищённые сервера конкурентов.
                 </p> -->
-                <h2>Growing Business</h2>
+                <h2 class="title">Growing Business</h2>
                 <p>Приложение</p></a
               >
             </li>
@@ -170,44 +171,48 @@
     <!--Футер-->
     <footer class="footer">
       <div class="footer-container container">
-        <a class="footer-link" href="/">Web <span> Studio</span></a>
-        <ul class="footer-list">
-          <li class="footer-list-adress">г. Киев, пр-т Леси Украинки, 26</li>
-          <li class="footer-list-link"><a href=""></a>info@example.com</li>
-          <li class="footer-list-link"><a href=""></a>+38 099 111 11 11</li>
-        </ul>
-        <h3>Присоединяйтесь</h3>
-        <ul class="footer-socials">
-          <li>
-            <a href="https://www.instagram.com"
-              ><img src="./images/instagram.svg" alt="instagram"
-            /></a>
-          </li>
-          <li>
-            <a href="https://www.twitter.com/"
-              ><img src="./images/twitter.svg" alt="twitter"
-            /></a>
-          </li>
-          <li>
-            <a href="https://www.facebook.com/"
-              ><img src="./images/facebook.svg" alt="facebook"
-            /></a>
-          </li>
-          <li>
-            <a href="https://https://www.linkedin.com/"
-              ><img src="./images/linkedin.svg" alt="linkedin"
-            /></a>
-          </li>
-        </ul>
-        <h3>Подписаться на рассылку</h3>
-        <ul class="footer-form">
-          <li><input type="text" /></li>
-          <li><button class="footer-button">Подписаться</button></li>
-        </ul>
-        <div class="text">
-          <span class="text">2020 | Developed by GoIT Students</span>
+        <div class="footer-contacts">
+          <a class="footer-link" href="/">Web <span> Studio</span></a>
+          <ul class="footer-list">
+            <li class="footer-list-adress">г. Киев, пр-т Леси Украинки, 26</li>
+            <li class="footer-list-link"><a href=""></a>info@example.com</li>
+            <li class="footer-list-tel"><a href=""></a>+38 099 111 11 11</li>
+          </ul>
+        </div>
+        <div class="footer-social">
+          <h3>Присоединяйтесь</h3>
+          <ul class="list">
+            <li>
+              <a href="https://www.instagram.com"
+                ><img src="./images/instagram.svg" alt="instagram"
+              /></a>
+            </li>
+            <li>
+              <a href="https://www.twitter.com/"
+                ><img src="./images/twitter.svg" alt="twitter"
+              /></a>
+            </li>
+            <li>
+              <a href="https://www.facebook.com/"
+                ><img src="./images/facebook.svg" alt="facebook"
+              /></a>
+            </li>
+            <li>
+              <a href="https://https://www.linkedin.com/"
+                ><img src="./images/linkedin.svg" alt="linkedin"
+              /></a>
+            </li>
+          </ul>
+        </div>
+        <div class="subscribe">
+          <h3>Подписаться на рассылку</h3>
+          <ul class="footer-form">
+            <li><input class="input" type="text" /></li>
+            <li><button class="footer-button">Подписаться</button></li>
+          </ul>
         </div>
       </div>
+      <p class="copyright">2020 | Developed by GoIT Students</p>
     </footer>
   </body>
 </html>
