--- a/index.html
+++ b/index.html
@@ -157,111 +157,119 @@
           <ul class="team-list list-flex">
             <li class="list-item">
               <img src="./images/john-smith.jpg" alt="John Smith" />
-              <h3>John Smith</h3>
-              <p>Product Designer</p>
-              <ul class="social">
-                <li>
-                  <a href="https://www.instagram.com"
-                    ><img src="./images/instagram.svg" alt="instagram"
-                  /></a>
-                </li>
-                <li>
-                  <a href="https://www.twitter.com/"
-                    ><img src="./images/twitter.svg" alt="twitter"
-                  /></a>
-                </li>
-                <li>
-                  <a href="https://www.facebook.com/"
-                    ><img src="./images/facebook.svg" alt="facebook"
-                  /></a>
-                </li>
-                <li>
-                  <a href="https://https://www.linkedin.com/"
-                    ><img src="./images/linkedin.svg" alt="linkedin"
-                  /></a>
-                </li>
-              </ul>
+              <div class="team-card">
+                <h3>John Smith</h3>
+                <p>Product Designer</p>
+                <ul class="social">
+                  <li>
+                    <a href="https://www.instagram.com"
+                      ><img src="./images/instagram.svg" alt="instagram"
+                    /></a>
+                  </li>
+                  <li>
+                    <a href="https://www.twitter.com/"
+                      ><img src="./images/twitter.svg" alt="twitter"
+                    /></a>
+                  </li>
+                  <li>
+                    <a href="https://www.facebook.com/"
+                      ><img src="./images/facebook.svg" alt="facebook"
+                    /></a>
+                  </li>
+                  <li>
+                    <a href="https://https://www.linkedin.com/"
+                      ><img src="./images/linkedin.svg" alt="linkedin"
+                    /></a>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="list-item">
               <img src="./images/marta-stewart.jpg" alt="Marta Stewart" />
-              <h3>Marta Stewart</h3>
-              <p>Frontend Developer</p>
-              <ul class="social">
-                <li>
-                  <a href="https://www.instagram.com"
-                    ><img src="./images/instagram.svg" alt="instagram"
-                  /></a>
-                </li>
-                <li>
-                  <a href="https://www.twitter.com/"
-                    ><img src="./images/twitter.svg" alt="twitter"
-                  /></a>
-                </li>
-                <li>
-                  <a href="https://www.facebook.com/"
-                    ><img src="./images/facebook.svg" alt="facebook"
-                  /></a>
-                </li>
-                <li>
-                  <a href="https://https://www.linkedin.com/"
-                    ><img src="./images/linkedin.svg" alt="linkedin"
-                  /></a>
-                </li>
-              </ul>
+              <div class="team-card">
+                <h3>Marta Stewart</h3>
+                <p>Frontend Developer</p>
+                <ul class="social">
+                  <li>
+                    <a href="https://www.instagram.com"
+                      ><img src="./images/instagram.svg" alt="instagram"
+                    /></a>
+                  </li>
+                  <li>
+                    <a href="https://www.twitter.com/"
+                      ><img src="./images/twitter.svg" alt="twitter"
+                    /></a>
+                  </li>
+                  <li>
+                    <a href="https://www.facebook.com/"
+                      ><img src="./images/facebook.svg" alt="facebook"
+                    /></a>
+                  </li>
+                  <li>
+                    <a href="https://https://www.linkedin.com/"
+                      ><img src="./images/linkedin.svg" alt="linkedin"
+                    /></a>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="list-item">
               <img src="./images/robert-jakis.jpg" alt="Robert Jakis" />
-              <h3>Robert Jakis</h3>
-              <p>Marketing</p>
-              <ul class="social">
-                <li>
-                  <a href="https://www.instagram.com"
-                    ><img src="./images/instagram.svg" alt="instagram"
-                  /></a>
-                </li>
-                <li>
-                  <a href="https://www.twitter.com/"
-                    ><img src="./images/twitter.svg" alt="twitter"
-                  /></a>
-                </li>
-                <li>
-                  <a href="https://www.facebook.com/"
-                    ><img src="./images/facebook.svg" alt="facebook"
-                  /></a>
-                </li>
-                <li>
-                  <a href="https://https://www.linkedin.com/"
-                    ><img src="./images/linkedin.svg" alt="linkedin"
-                  /></a>
-                </li>
-              </ul>
+              <div class="team-card">
+                <h3>Robert Jakis</h3>
+                <p>Marketing</p>
+                <ul class="social">
+                  <li>
+                    <a href="https://www.instagram.com"
+                      ><img src="./images/instagram.svg" alt="instagram"
+                    /></a>
+                  </li>
+                  <li>
+                    <a href="https://www.twitter.com/"
+                      ><img src="./images/twitter.svg" alt="twitter"
+                    /></a>
+                  </li>
+                  <li>
+                    <a href="https://www.facebook.com/"
+                      ><img src="./images/facebook.svg" alt="facebook"
+                    /></a>
+                  </li>
+                  <li>
+                    <a href="https://https://www.linkedin.com/"
+                      ><img src="./images/linkedin.svg" alt="linkedin"
+                    /></a>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="list-item">
               <img src="./images/martin-doe.jpg" alt="Martin Doe" />
-              <h3>Martin Doe</h3>
-              <p>UI Designer</p>
-              <ul class="social">
-                <li>
-                  <a href="https://www.instagram.com"
-                    ><img src="./images/instagram.svg" alt="instagram"
-                  /></a>
-                </li>
-                <li>
-                  <a href="https://www.twitter.com/"
-                    ><img src="./images/twitter.svg" alt="twitter"
-                  /></a>
-                </li>
-                <li>
-                  <a href="https://www.facebook.com/"
-                    ><img src="./images/facebook.svg" alt="facebook"
-                  /></a>
-                </li>
-                <li>
-                  <a href="https://https://www.linkedin.com/"
-                    ><img src="./images/linkedin.svg" alt="linkedin"
-                  /></a>
-                </li>
-              </ul>
+              <div class="team-card">
+                <h3>Martin Doe</h3>
+                <p>UI Designer</p>
+                <ul class="social">
+                  <li>
+                    <a href="https://www.instagram.com"
+                      ><img src="./images/instagram.svg" alt="instagram"
+                    /></a>
+                  </li>
+                  <li>
+                    <a href="https://www.twitter.com/"
+                      ><img src="./images/twitter.svg" alt="twitter"
+                    /></a>
+                  </li>
+                  <li>
+                    <a href="https://www.facebook.com/"
+                      ><img src="./images/facebook.svg" alt="facebook"
+                    /></a>
+                  </li>
+                  <li>
+                    <a href="https://https://www.linkedin.com/"
+                      ><img src="./images/linkedin.svg" alt="linkedin"
+                    /></a>
+                  </li>
+                </ul>
+              </div>
             </li>
           </ul>
         </div>
@@ -294,18 +302,18 @@
       </section>
     </main>
     <!--Футер-->
-    <footer class="footer">
-      <div class="footer-container container">
-        <div class="footer-contacts">
+    <footer class="footer-section">
+      <div class="footer container">
+        <div>
           <a class="footer-link" href="/">Web <span> Studio</span></a>
-          <ul class="footer-list">
-            <li class="footer-list-adress">г. Киев, пр-т Леси Украинки, 26</li>
-            <li class="footer-list-link"><a href=""></a>info@example.com</li>
-            <li class="footer-list-tel"><a href=""></a>+38 099 111 11 11</li>
-          </ul>
+          <address class="footer-adress">
+            <p class="adress">г. Киев, пр-т Леси Украинки, 26</p>
+            <a class="mail" href="">info@example.com</a>
+            <a class="telephone" href="">+38 099 111 11 11</a>
+          </address>
         </div>
         <div class="footer-social">
-          <h3>Присоединяйтесь</h3>
+          <b>Присоединяйтесь</b>
           <ul class="list">
             <li>
               <a href="https://www.instagram.com"
@@ -330,14 +338,14 @@
           </ul>
         </div>
         <div class="subscribe">
-          <h3>Подписаться на рассылку</h3>
+          <b>Подписаться на рассылку</b>
           <ul class="footer-form">
             <li><input class="input" type="text" /></li>
             <li><button class="footer-button">Подписаться</button></li>
           </ul>
         </div>
       </div>
-      <p class="copyright">2020 | Developed by GoIT Students</p>
+      <p class="copyright container">2020 | Developed by GoIT Students</p>
     </footer>
   </body>
 </html>
