--- a/portfolio.html
+++ b/portfolio.html
@@ -169,18 +169,18 @@
       </section>
     </main>
     <!--Футер-->
-    <footer class="footer">
-      <div class="footer-container container">
-        <div class="footer-contacts">
+    <footer class="footer-section">
+      <div class="footer container">
+        <div>
           <a class="footer-link" href="/">Web <span> Studio</span></a>
-          <ul class="footer-list">
-            <li class="footer-list-adress">г. Киев, пр-т Леси Украинки, 26</li>
-            <li class="footer-list-link"><a href=""></a>info@example.com</li>
-            <li class="footer-list-tel"><a href=""></a>+38 099 111 11 11</li>
-          </ul>
+          <address class="footer-adress">
+            <p class="adress">г. Киев, пр-т Леси Украинки, 26</p>
+            <a class="mail" href="">info@example.com</a>
+            <a class="telephone" href="">+38 099 111 11 11</a>
+          </address>
         </div>
         <div class="footer-social">
-          <h3>Присоединяйтесь</h3>
+          <b>Присоединяйтесь</b>
           <ul class="list">
             <li>
               <a href="https://www.instagram.com"
@@ -205,14 +205,14 @@
           </ul>
         </div>
         <div class="subscribe">
-          <h3>Подписаться на рассылку</h3>
+          <b>Подписаться на рассылку</b>
           <ul class="footer-form">
             <li><input class="input" type="text" /></li>
             <li><button class="footer-button">Подписаться</button></li>
           </ul>
         </div>
       </div>
-      <p class="copyright">2020 | Developed by GoIT Students</p>
+      <p class="copyright container">2020 | Developed by GoIT Students</p>
     </footer>
   </body>
 </html>
