--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
       </section>
       <!--Наша команда-->
       <section class="section-team">
-        <div class="team-container container">
+        <div class="container">
           <h2>Наша команда</h2>
           <ul class="team-list list-flex">
             <li class="list-item">
@@ -184,6 +184,7 @@
                 </ul>
               </div>
             </li>
+
             <li class="list-item">
               <img src="./images/marta-stewart.jpg" alt="Marta Stewart" />
               <div class="team-card">
@@ -275,7 +276,7 @@
         </div>
       </section>
       <!--Постоянные клиенты-->
-      <section class="section-clients">
+      <section class="clients">
         <div class="clients-container container">
           <h2>Постоянные клиенты</h2>
           <ul class="client-list list-flex">
@@ -317,32 +318,34 @@
           <ul class="list">
             <li>
               <a href="https://www.instagram.com"
-                ><img src="./images/instagram.svg" alt="instagram"
+                ><img src="./images/insta-foot.svg" alt="instagram"
               /></a>
             </li>
             <li>
               <a href="https://www.twitter.com/"
-                ><img src="./images/twitter.svg" alt="twitter"
+                ><img src="./images/twitter-foot.svg" alt="twitter"
               /></a>
             </li>
             <li>
               <a href="https://www.facebook.com/"
-                ><img src="./images/facebook.svg" alt="facebook"
+                ><img src="./images/facebook-foot.svg" alt="facebook"
               /></a>
             </li>
             <li>
               <a href="https://https://www.linkedin.com/"
-                ><img src="./images/linkedin.svg" alt="linkedin"
+                ><img src="./images/linkedin-foot.svg" alt="linkedin"
               /></a>
             </li>
           </ul>
         </div>
         <div class="subscribe">
           <b>Подписаться на рассылку</b>
-          <ul class="footer-form">
-            <li><input class="input" type="text" /></li>
-            <li><button class="footer-button">Подписаться</button></li>
-          </ul>
+          <div class="footer-form">
+            <input class="input" type="text" />
+            <button class="footer-button">
+              Подписаться <img src="./images/telegram.svg" alt="telegram" />
+            </button>
+          </div>
         </div>
       </div>
       <p class="copyright container">2020 | Developed by GoIT Students</p>
