--- a/portfolio.html
+++ b/portfolio.html
@@ -41,7 +41,7 @@
     </header>
     <!--Основной контент-->
     <main>
-      <section>
+      <section class="portfolio">
         <div class="container">
           <h1 class="title-portf">Заголовок</h1>
           <ul class="list-button">
@@ -53,7 +53,7 @@
           </ul>
         </div>
       </section>
-      <section>
+      <section class="content">
         <div class="content-container container">
           <ul class="list-content">
             <li class="list-item">
@@ -118,7 +118,7 @@
             </li>
             <li class="list-item">
               <a href=""
-                ><img src="./images/mac.jpg" alt="Компьютер" />
+                ><img src="./images/computer.jpg" alt="Компьютер" />
                 <!-- <p> 
                   Технокряк это современная площадка распространения
                   коронавируса. Компании используют эту платформу для цифрового
@@ -154,7 +154,7 @@
             </li>
             <li class="list-item">
               <a href=""
-                ><img src="./images/laptop.jpg" alt="Ноутбук" />
+                ><img src="./images/noutbuk.jpg" alt="Ноутбук" />
                 <!--  <p>
                   Технокряк это современная площадка распространения
                   коронавируса. Компании используют эту платформу для цифрового
@@ -184,32 +184,34 @@
           <ul class="list">
             <li>
               <a href="https://www.instagram.com"
-                ><img src="./images/instagram.svg" alt="instagram"
+                ><img src="./images/insta-foot.svg" alt="instagram"
               /></a>
             </li>
             <li>
               <a href="https://www.twitter.com/"
-                ><img src="./images/twitter.svg" alt="twitter"
+                ><img src="./images/twitter-foot.svg" alt="twitter"
               /></a>
             </li>
             <li>
               <a href="https://www.facebook.com/"
-                ><img src="./images/facebook.svg" alt="facebook"
+                ><img src="./images/facebook-foot.svg" alt="facebook"
               /></a>
             </li>
             <li>
               <a href="https://https://www.linkedin.com/"
-                ><img src="./images/linkedin.svg" alt="linkedin"
+                ><img src="./images/linkedin-foot.svg" alt="linkedin"
               /></a>
             </li>
           </ul>
         </div>
         <div class="subscribe">
           <b>Подписаться на рассылку</b>
-          <ul class="footer-form">
-            <li><input class="input" type="text" /></li>
-            <li><button class="footer-button">Подписаться</button></li>
-          </ul>
+          <div class="footer-form">
+            <input class="input" type="text" />
+            <button class="footer-button">
+              Подписаться <img src="./images/telegram.svg" alt="telegram" />
+            </button>
+          </div>
         </div>
       </div>
       <p class="copyright container">2020 | Developed by GoIT Students</p>
