--- a/portfolio.html
+++ b/portfolio.html
@@ -64,9 +64,9 @@
                   коронавируса. Компании используют эту платформу для цифрового
                   шпионажа и атак на защищённые сервера конкурентов.
                 </p> -->
-                <h2 class="title">Технокряк</h2>
+                <div class="content-name"><h2 class="title">Технокряк</h2>
                 <p>Веб-сайт</p></a
-              >
+              ></div>
             </li>
             <li class="list-item">
               <a href=""
@@ -76,9 +76,9 @@
                   коронавируса. Компании используют эту платформу для цифрового
                   шпионажа и атак на защищённые сервера конкурентов.
                 </p> -->
-                <h2 class="title">Постер New Orlean vs Golden Stars</h2>
+                <div class="content-name"><h2 class="title">Постер New Orlean vs Golden Stars</h2>
                 <p>Дизайн</p></a
-              >
+              ></div>
             </li>
             <li class="list-item">
               <a href=""
@@ -88,9 +88,9 @@
                   коронавируса. Компании используют эту платформу для цифрового
                   шпионажа и атак на защищённые сервера конкурентов.
                 </p> -->
-                <h2 class="title">Ресторан Seafood</h2>
+                <div class="content-name"><h2 class="title">Ресторан Seafood</h2>
                 <p>Приложение</p></a
-              >
+              ></div>
             </li>
             <li class="list-item">
               <a href=""
@@ -100,9 +100,9 @@
                   коронавируса. Компании используют эту платформу для цифрового
                   шпионажа и атак на защищённые сервера конкурентов.
                 </p> -->
-                <h2 class="title">Проект Prime</h2>
+                <div class="content-name"><h2 class="title">Проект Prime</h2>
                 <p>Маркетинг</p></a
-              >
+              ></div>
             </li>
             <li class="list-item">
               <a href=""
@@ -112,9 +112,9 @@
                   коронавируса. Компании используют эту платформу для цифрового
                   шпионажа и атак на защищённые сервера конкурентов.
                 </p> -->
-                <h2 class="title">Проект Boxes</h2>
+                <div class="content-name"><h2 class="title">Проект Boxes</h2>
                 <p>Приложение</p></a
-              >
+              ></div>
             </li>
             <li class="list-item">
               <a href=""
@@ -124,9 +124,9 @@
                   коронавируса. Компании используют эту платформу для цифрового
                   шпионажа и атак на защищённые сервера конкурентов.
                 </p> -->
-                <h2 class="title">Inspiration has no Borders</h2>
+                <div class="content-name"><h2 class="title">Inspiration has no Borders</h2>
                 <p>Веб-сайт</p></a
-              >
+              ></div>
             </li>
             <li class="list-item">
               <a href=""
@@ -136,9 +136,9 @@
                   коронавируса. Компании используют эту платформу для цифрового
                   шпионажа и атак на защищённые сервера конкурентов.
                 </p> -->
-                <h2 class="title">Издание Limited Edition</h2>
+                <div class="content-name"><h2 class="title">Издание Limited Edition</h2>
                 <p>Дизайн</p></a
-              >
+              ></div>
             </li>
             <li class="list-item">
               <a href=""
@@ -148,9 +148,9 @@
                   коронавируса. Компании используют эту платформу для цифрового
                   шпионажа и атак на защищённые сервера конкурентов.
                 </p> -->
-                <h2 class="title">Проект LAB</h2>
+                <div class="content-name"><h2 class="title">Проект LAB</h2>
                 <p>Маркетинг</p></a
-              >
+              ></div>
             </li>
             <li class="list-item">
               <a href=""
@@ -160,9 +160,9 @@
                   коронавируса. Компании используют эту платформу для цифрового
                   шпионажа и атак на защищённые сервера конкурентов.
                 </p> -->
-                <h2 class="title">Growing Business</h2>
+                <div class="content-name"><h2 class="title">Growing Business</h2>
                 <p>Приложение</p></a
-              >
+              ></div>
             </li>
           </ul>
         </div>
